--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bashka/bricks_test",
-    "version": "1.0",
+    "version": "1.1",
     "description": "",
     "type": "bricks-module",
     "license": "GNU-3.0",
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-      "php": ">=5.5.0"
+      "php": ">=5.5.0",
+      "bashka/bricks_di": "1.0"
     },
     "autoload": {
       "classmap": [
